fix for body scrolling with modals and popovers cutoff within modals

--- a/assets/scss/modals.scss
+++ b/assets/scss/modals.scss
@@ -47,6 +47,14 @@
     }
 }
 
+//popovers within modals
+.modal {
+  .popover {
+    font-weight: normal;
+    z-index: 1050;
+  }
+}
+
 // modal
 .modal-dialog {
   width: 365px;
@@ -74,26 +82,6 @@
     }
   }
 }
-
-/*
-
-#implement-modal {
-  .tab-content {
-    margin-top: 20px;
-    min-height: 315px;
-  }
-}
-#implement-modal, #service-modal {
-  .modal-dialog {
-    width: 700px;
-    .modal-body {
-      max-height: 500px;
-      overflow-y: scroll;
-    }
-  }
-}
-
-*/
 
 .modal-dialog .modal-content .modal-body .input-group {
   margin-bottom: 20px;
@@ -162,10 +150,6 @@ body.modal-open,
         border-top: 1px solid rgba(0,0,0,0.1);
         margin-right: -20px;
         margin-left: -20px;
-      }
-
-      .popover {
-        font-weight: normal;
       }
 
       input {
